--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background-color: rgb(252,250,242);
+	background-color: rgb(170, 168, 161);
 	height:100%;
 }
 
@@ -32,7 +32,7 @@ body{
 	height:50px;
 	width:50px;
 	float:right;
-	margin-right:0px; 
+	margin-right:0px;
 	margin-left:10px;
 	margin-top: 10px;
 }
@@ -109,11 +109,44 @@ body{
 
 .backImage{
 	height:300px;
-/*	background-image: url("backImage.jpg");	
+/*	background-image: url("backImage.jpg");
 	background-size: 100% 80%;
 	background-repeat: no-repeat;
 */}
 
 .bottom{
 	text-align: center;
+}
+
+.iconStyle{
+	color: #bfbfbf;
+}
+.voteup{
+	color: red;
+	font-size: 20px;
+}
+
+.voteNum{
+	color: red;
+	font-size: 20px;
+}
+
+.votedown{
+	color: #636366;
+	font-size: 20px;
+}
+.views {
+	font-size: 100px;
+	padding: 10px 5px 10px 5px;
+}
+
+.list-group{
+	padding: 30px 30px 30px 30px;
+}
+.listgroup-item{
+	padding: 30px 30px 30px 30px;
+}
+
+.questionBar{
+	padding: 30px 0px 30px 0px;
 }
