--- a/css/filter.css
+++ b/css/filter.css
@@ -1247,3 +1247,28 @@ b {
     display: block;
     vertical-align: middle;
 }
+
+table {
+    display: table;
+    border-collapse: separate;
+    border-spacing: 2px;
+    border-color: grey;
+
+}
+
+
+.chbox {
+    width: 50px;
+}
+.poll input[type="radio"] + label {
+    /* display: inline-block; */
+    width: 31px;
+    height: 31px;
+    background: url(http://forum.azyrusthemes.com/images/radio.jpg) 0 0 no-repeat;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+.poll input[type="radio"]:checked + label {
+    background: url(http://forum.azyrusthemes.com/images/radio.jpg) -31px 0 no-repeat;
+}
