--- a/css/custom.css
+++ b/css/custom.css
@@ -155,7 +155,7 @@ td.chbox {
     font-size: 16px;
     font-family: 'Open Sans Bold', sans-serif;
     margin: 0;
-    padding: 20px 0 20px 0;
+    padding: 0 0 20px 0;
 }
 
 .like-or-not {
