--- a/css/custom.css
+++ b/css/custom.css
@@ -2,9 +2,6 @@ body {
     background-color: #e8e8e8;
 }
 
-.navbar-carry-room {
-    background-color: #ffffff;
-}
 
 /*--- Sidebar ---*/
 
@@ -38,29 +35,23 @@ body {
 ul.cats li {
     list-style: none;
     display: block;
-    margin:0;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     padding:0;
     line-height: 30px;
 }
 
 ul.cats {
-    margin: 0;
+    text-align: center;
     padding: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 ul.cats li a {
     font-size: 14px;
-    color: #363838;
-    font-family: 'Open Sans Light', sans-serif;
     line-height: 30px;
-}
-
-ul.cats .badge {
-    background-color: #bdc3c7;
-    font-size: 12px;
-    color: #ffffff;
-    font-family: 'Open Sans Bold', sans-serif;
-    margin-top: 7px;
 }
 
 
@@ -150,6 +141,16 @@ td.chbox {
     min-height: 150px;
 }
 
+.question-right-reply {
+    /*display: inline-block;*/
+    background-color: #f5f5f5;
+    padding: 10px 5px 10px 5px;
+    margin-left: 70px;
+    margin-right: 70px;
+    border-left: 1px solid #f1f1f1;
+    min-height: 150px;
+}
+
 .card h2 {
     color: #363838;
     font-size: 16px;
@@ -193,6 +194,46 @@ a.vote.enabled:hover:after {
     opacity: 1;
 }
 
+
+/*------------ Added ----------*/
+
+.mainViewSection{
+    margin-top: 80px;
+}
+
+
+img.avatarNav {
+    border-radius:50px;
+    width: 30px;
+    height: 30px;
+    margin-top: 10px;
+    dipslay:table-cell;
+    vertical-align:middle;
+}
+
 img.avatar {
-    /*background-image: url("../img/avatar.png");*/
+    border-radius:50px;
+    width: 50px;
+    height: 50px;
+    dipslay:table-cell;
+    vertical-align:middle;
+}
+
+.evenList{
+    font-color: #357ebd;
+    background-color: #f5f5f5;
+}
+
+.oddList{
+    font-color: #357ebd;
+    background-color: #fafafa;
+}
+
+.outheader{
+    border-radius:5px;
+    font-color: #707070;
+    padding: 10px 10px 10px 10px;
+    background-color: #faf2e0;
+    font-size: 20px;
+    font-weight: bold !important;
 }
